--- a/Weather.ipynb
+++ b/Weather.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a2d5b691",
+   "id": "b34864d8",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "011ce90b",
+   "id": "06c14425",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "617bde31",
+   "id": "907b326e",
    "metadata": {},
    "outputs": [
     {
@@ -1533,8 +1533,8 @@
     "db = mysql.connector.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
-    "    password=\"Yzfx123$\",\n",
-    "    database=\"rajdeepdb\",\n",
+    "    password=\"YOUR PASSWORD\",\n",
+    "    database=\"YOUR DATABASE NAME\",\n",
     "    port=3306\n",
     ")\n",
     "\n",
